k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-roadmap
  labels:
    app: devops-roadmap
spec:
  type: ClusterIP
  selector:
    app: devops-roadmap
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
