k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-roadmap-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devops-roadmap.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-roadmap
                port:
                  number: 80
